# Project-Architecture-Visualization

./: .gitignore  README.md  pyproject.toml
docs/: feature-architecture-plan.md
src/archviz/: __init__.py  cli.py  constants.py  containers.py  io.py  models.py  pipeline.py  report.py  scanner.py  transforms.py  utils.py  views.py
src/archviz/extractors/: __init__.py  base.py  dependencies.py  generic_text_extractor.py  python_extractor.py  typescript_extractor.py
src/archviz/features/: __init__.py  classifier.py  config.py  docs.py  models.py  views.py
src/archviz/renderers/: __init__.py  d2.py
tests/: test_cli_smoke.py
tests/features/: test_classifier.py  test_config.py  test_docs.py
